# the_observer_be

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/api/: main.py
core/api/routers/: auth.py  user.py
core/api/schema/: user.py
core/common/config/: config.yaml
core/common/db/mysql/: exceptions.py  services.py  settings.py  table_schema.py
core/common/helper/: exception_helper.py  jwt_helper.py  nested.py
core/common/loader/: config_loader.py  exceptions.py
core/db/mysql/: exceptions.py  manager.py  settings.py  table_schema.py
crawler/common/: base_cralwer.py  config.py
